--- a/furnitureshop/src/main/webapp/assets/css/custom.css
+++ b/furnitureshop/src/main/webapp/assets/css/custom.css
@@ -6,13 +6,13 @@
 
 html{
 	
-	height:100%
+	height:100%;
 } 
 
 
  body {
   padding-top: 70px;
- 
+ height:100%;
 }
  
 @media (min-width: 992px) {
@@ -26,12 +26,13 @@ html{
 
 .wrapper{
 	min-height:100%;
+	/* position:relative; */
 	
 }
 
 .content{
 	
-	padding-bottom:60px;/* height of footer */
+	padding-bottom: 60px;/* height of footer */
 	min-height:100%;
 	
 }
@@ -40,7 +41,8 @@ html{
 .footer{
 	
 	
-	position:fixed;
-	bottom:15px;
+	/* position:absolute; */
+	bottom:0px;
+	
 	
 }
